# ASCENT

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  crps.py  pipeline.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: code-quality-pr.yaml  test.yml
ascent/: __init__.py  convert_onnx.py  convert_torchscript.py  eval.py  predict.py  preprocess_and_plan.py  train.py
ascent/configs/: eval.yaml  onnx.yaml  predict.yaml  preprocess_and_plan.yaml  torchscript.yaml  train.yaml
ascent/datamodules/: dealias_datamodule.py  mnist_datamodule.py  nnunet_datamodule.py  nnunet_datamodule_selfsupervised.py  nnunet_dealias_datamodule.py  nnunet_reg_datamodule.py
ascent/dataset_conversion/: DE_selfsupervised.py  Dealias_deep_unfolding.py  a3c.py  acdc.py  camus.py  cardinal.py  dealias_deep_unfolding.py  dealias_segmentation.py  myosaiq.py  ted.py  utils.py
ascent/models/: mnist_module.py  nnunet_dealias_module.py  nnunet_module.py  nnunet_module_EndToEnd.py  nnunet_module_GAN.py  nnunet_module_selfsupervised.py  nnunet_reg_module.py  pix2pix_module.py
ascent/postprocessing/: extract_contour.py  postprocessing.py
ascent/preprocessing/: experiment_planner_2DUNet.py  experiment_planner_3DUNet.py  preprocessing.py  utils.py
ascent/utils/: __init__.py  dataset.py  decorators.py  dict_utils.py  file_and_folder_operations.py  inferers.py  instantiators.py  logging_utils.py  rich_utils.py  sliding_window_prediction.py  softmax.py  tensor_utils.py  transforms.py  type_definitions.py  utils.py  visualization.py
configs/: eval.yaml  predict.yaml  preprocess_and_plan.yaml  train.yaml
configs/callbacks/: learning_rate_monitor.yaml  nnunet.yaml
configs/datamodule/: ap3c.yaml  camus.yaml  camus_2d.yaml  camus_3d.yaml  camus_challenge_2d.yaml  cardinal+ted_3d.yaml  cardinal2_3d.yaml  cardinal3_2d.yaml  cardinal3_3d.yaml  cardinal_3d.yaml  dealias_2d.yaml  dealiasc_2d.yaml  dealiasm_2d.yaml  dealiasreg_2d.yaml  dealiasv_2d.yaml  mnist.yaml  nnunet.yaml  ted256_3d.yaml  ted_3d.yaml  unwrap_2d.yaml  unwrapv2_2d.yaml
configs/debug/: fdr.yaml
configs/experiment/: camus.yaml  camus_2d.yaml  cardinal+ted_3d.yaml  cardinal2_3d.yaml  cardinal3_2d.yaml  cardinal3_3d.yaml  cardinal_2d.yaml  dealias_2d.yaml  dealiasc_2d.yaml  dealiasm_2d.yaml  dealiasreg_2d.yaml  example.yaml  pdnet_2d.yaml  pdnetreg_2d.yaml  pdnetv2_2d.yaml  ted256_3d.yaml  ted_3d.yaml  unwrap_2d.yaml  unwrapv2_2d.yaml
configs/hydra/: nnunet.yaml
configs/logger/: comet.yaml  neptune.yaml
configs/model/: camus.yaml  cardinal2_3d.yaml  cardinal_3d.yaml  dealiasreg_2d.yaml  mnist.yaml  nnunet.yaml  nnunet_old.yaml  pdnet_2d.yaml  pdnetv2_2d.yaml  pdnetv2reg_2d.yaml  ted256_3d.yaml  unwrap_2d.yaml  unwrapv2_2d.yaml
configs/paths/: custom.yaml
configs/planner/: nnunet2d.yaml  nnunet3d.yaml
configs/preprocessor/: dealias_du.yaml  segmentation.yaml
configs/trainer/: ddp.yaml  nnunet.yaml
covid/: eval.py  plan_and_preprocess.py  predict.py  preprocess_and_plan.py  train.py
covid/datamodules/: nnunet_datamodule.py
covid/models/: mnist_module.py  nnunet_module.py
covid/preprocessing/: experiment_planner_2DUNet.py  experiment_planner_3DUNet.py  preprocessing.py  preprocessingV2.py
covid/tasks/: eval_task.py  train_task.py
covid/utils/: __init__.py  file_and_folder_operations.py  rich_utils.py  utils.py
hydra_plugins/: README.md
notebooks/: acdc.ipynb
scripts/: schedule.sh
src/models/: mnist_module.py
tests/: test_eval.py  test_mnist_datamodule.py  test_sweeps.py  test_train.py
(+203 files in other folders)
