[flake8]
extend-ignore =
	D100  # D100 - missing docstring in public module
    D104  # D104 - missing docstring in public package
    D107  # D107 - missing docstring in __init__
    E203  # E203 - whitespace before ':'. Opposite convention enforced by black
    E231  # E231 - missing whitespace after ',', ';', or ':'; for black
    E501  # E501 - line too long. Handled by black, we have longer lines
    W503  # W503 - line break before binary operator, need for black

[options.entry_points]
console_scripts =
    train = covid.train:main
    evaluate = covid.eval:main
    predict = covid.predict:main
    preprocess_and_plan = covid.preprocess_and_plan:main
